  was thrown, due to development code introduced during version 2.5 development.
- An error occured when F5 (Refresh) was hit in a SQL Work Sheet or an Object Tree Window.
- Updated Simplified Chinese translation strings (Thanks to xpdz)
- Updated French translation strings (Thanks to Erwan Duroselle)
- Updated Italian translation strings (Thanks to Ivo Neri)

1682289 Schema browser won't show all schemas. 
	    (Thanks to Robert Williams for the patch)

1680919 failure to export cvs/excel on mac osx (incomplete ClassPath entry in
        Info.plist)

1679998 DOUBLE PRECISION is rounded with locale datatype setting

1660412 Create insert script hangs on explicit Oracle DATE fields

1659412 TIMESTAMP WITH TIME ZONE shows as <Unknown (-101)> - Support was added
        for rendering values of columns with this Oracle-specific type.

1643307 Title is missing in Save-Dialog

1617839 Two new lines with white spaces in between do not separate SQLs when 
        SQLs are executed without selection.

1639680 Cannot export smallint and decimal to MS Excel

1635259 Session menu has two items with mnemonic "T"

1639662 Block comments can be ended prematurely
        (Thanks to Sam Polak for the patch)

1631392 (Dropping materialized views) - The 'Drop' menu item has been replaced
        by a 'Drop Table(s)' menu item available with the Refactoring Plugin.  
        The new menu item allows the user to specify whether or not to cascade 
        constraints as well as being able to see the SQL that will be executed.

DBCopy Plugin 
  - If the source/dest database is Oracle, and the type of column being copied 
    is DATE, then treat it like a TIMESTAMP for reading or writing the value.  
    Oracle stores a time component in date columns and this change prevents the 
    time component value from being lost if the destination database can also 
    store a time component in DATE columns.

Derby Plugin  